---
source: compiler-core/src/fsharp/tests/external_fn.rs
assertion_line: 5
expression: "\n@external(fsharp, \"FSharp.MyApp\", \"run\")\npub fn run() -> Int\n\npub fn main() -> Int {\n    run()\n}\n"
---
module rec my.``mod``
let run() : int = FSharp.MyApp.run ()
let main (): int = begin
    run()
end
